// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfraProvisioning Edit View should render properly - loading case 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group bp3-disabled"
          data-id="provisionerEnabled-0"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox Checkbox--checkbox provisionerEnabledCheckbox StyledProps--main StyledProps--inline"
            >
              <input
                checked=""
                disabled=""
                name="provisionerEnabled"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="infraProvisionerBase_provisionerEnabled"
              >
                pipelineSteps.deploy.provisioner.enableProvisionerLabel
              </span>
            </label>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="bp3-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`InfraProvisioning Edit View should render properly - not enabled case 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="provisionerEnabled-0"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checkbox provisionerEnabledCheckbox StyledProps--main StyledProps--inline"
            >
              <input
                name="provisionerEnabled"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="infraProvisionerBase_provisionerEnabled"
              >
                pipelineSteps.deploy.provisioner.enableProvisionerLabel
              </span>
            </label>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
